--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,7 @@
+
 # Disable directory browsing
 Options -Indexes
+DirectoryIndex index.php
 
 # ----------------------------------------------------------------------
 # Rewrite engine
@@ -14,7 +16,8 @@ Options -Indexes
 	# If you installed CodeIgniter in a subfolder, you will need to
 	# change the following line to match the subfolder you need.
 	# http://httpd.apache.org/docs/current/mod/mod_rewrite.html#rewritebase
-	# RewriteBase /
+	# If your app lives in a subfolder, change the next line accordingly
+	RewriteBase /
 
 	# Redirect Trailing Slashes...
 	RewriteCond %{REQUEST_FILENAME} !-d
