--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,4 +2,4 @@
     PHP_VERSION = '8.2'
 
 [phases.setup]
-    aptPkgs = ['php8.2-intl']
+    aptPkgs = ['php8.2-intl', 'php8.2-mysql', 'php8.2-mbstring']
