--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
+[phases.setup]
+    aptPkgs = ['php8.2-intl', 'php8.2-mysql']
+
 [variables]
     PHP_VERSION = '8.2'
-
-[phases.setup]
-    aptPkgs = ['php8.2-intl', 'php8.2-mysql', 'php8.2-mbstring']
